[8.0_minorisa] odoo.conf

--- a/odoo.conf
+++ b/odoo.conf
@@ -15,5 +15,5 @@ log_level =  debug
 
 addons_path = /home/jaume.planas/github/openupgrade/addons,/home/jaume.planas/github/openupgrade/openerp/addons
 
-xmlrpc_port =  8769
-longpolling_port = 8772
+# xmlrpc_port =  8869
+# longpolling_port = 8872
