--- a/odoo.conf
+++ b/odoo.conf
@@ -5,15 +5,15 @@
 
 
 db_host = localhost
-db_user = jaume.planas
-db_password = Jaume2015!
+db_user = odoo
+db_password = Odoo2018!
 
 # db_name = mig_minorisa_71
 
 admin_passwd = dev7demo
 log_level =  debug
 
-addons_path = /home/jaume.planas/github/openupgrade/addons,/home/jaume.planas/github/openupgrade/openerp/addons
+addons_path = /home/odoo/openupgrade/addons,/home/odoo/openupgrade/openerp/addons
 
 # xmlrpc_port =  8869
 # longpolling_port = 8872
