--- a/odoo.conf
+++ b/odoo.conf
@@ -1,7 +1,7 @@
 [options]
 db_host = localhost
-db_user = jaume.planas
-db_password = Jaume2015!
+db_user = odoo
+db_password = Odoo2018!
 
 db_name = mig_minorisa_90
 
@@ -9,7 +9,7 @@ admin_passwd = dev7demo
 log_level =  debug
 
 # addons_path = /home/jaume.planas/mig/manual/8.0/custom
-addons_path = /home/jaume.planas/github/openupgrade/addons,/home/jaume.planas/github/openupgrade/openerp/addons
+addons_path = /home/odoo/openupgrade/addons,/home/odoo/openupgrade/openerp/addons
 
 # xmlrpc_port =  8969
 # longpolling_port = 8972
