--- a/odoo.conf
+++ b/odoo.conf
@@ -1,15 +1,14 @@
 [options]
 db_host = localhost
-db_user = jaume.planas
-db_password = Jaume2015!
+db_user = odoo
+db_password = Odoo2018!
 
 db_name = mig_minorisa_100
 
 admin_passwd = dev7demo
 log_level =  debug
 
-# addons_path = /home/jaume.planas/mig/manual/7.0/addons,/home/jaume.planas/mig/manual/7.0/openerp/addons_clients,/home/jaume.planas/mig/manual/7.0/openerp/addons_millores,/home/jaume.planas/mig/manual/7.0/openerp/addons
-addons_path = /home/jaume.planas/github/openupgrade/addons,/home/jaume.planas/github/openupgrade/odoo/addons
+addons_path = /home/odoo/openupgrade/addons,/home/odoo/openupgrade/odoo/addons
 
 # xmlrpc_port =  18069
 # longpolling_port = 18072
