[0.0_minorisa] odoo.conf

--- a/odoo.conf
+++ b/odoo.conf
@@ -8,7 +8,7 @@ db_host = localhost
 db_user = odoo
 db_password = Odoo2018!
 
-# db_name = mig_minorisa_71
+db_name = mig_minorisa_80
 
 admin_passwd = dev7demo
 log_level =  debug
