--- a/odoo.conf
+++ b/odoo.conf
@@ -8,7 +8,7 @@ db_name = mig_minorisa_100
 admin_passwd = dev7demo
 log_level =  debug
 
-addons_path = /home/odoo/openupgrade/addons,/home/odoo/openupgrade/odoo/addons
+# addons_path = /home/odoo/openupgrade/addons,/home/odoo/openupgrade/openerp/addons
 
 # xmlrpc_port =  18069
 # longpolling_port = 18072
