--- a/odoo.conf
+++ b/odoo.conf
@@ -3,7 +3,7 @@ db_host = localhost
 db_user = odoo
 db_password = Odoo2018!
 
-db_name = mig_minorisa_90
+db_name = mig_neuroelectrics_90
 
 admin_passwd = dev7demo
 log_level =  debug
